--- a/NetworkX Testing.ipynb
+++ b/NetworkX Testing.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Shortest Paths with NetworkX\n",
+    "## NetworkX: Creating Graphs, Finding Paths, Exporting Data\n",
     "\n",
     "This notebook demonstrates how to use they Python library NetworkX to find the shortest path in a graph data structure."
    ]
@@ -19,6 +19,7 @@
    "source": [
     "import networkx as nx\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "%matplotlib inline  "
    ]
   },
@@ -115,7 +116,7 @@
     {
      "data": {
       "text/plain": [
-       "<dictionary-keyiterator at 0x10440c1b0>"
+       "<dictionary-keyiterator at 0x108a6ff70>"
       ]
      },
      "execution_count": 5,
@@ -436,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -447,7 +448,7 @@
        "({1: 0, 2: 2.0, 3: 1.0, 4: 3.0}, {1: [1], 2: [1, 2], 3: [1, 3], 4: [1, 2, 4]})"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,6 +456,168 @@
    "source": [
     "# This method returns the path and length:\n",
     "nx.single_source_dijkstra(G, 1, 4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Experiment with ways of exporting the graph data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Option 1: dict of dicts. Single data structure contains all graph information."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: {2: {'another_attribute': 10, 'color': 'red', 'weight': 2.0},\n",
+       "  3: {'another_attribute': 10, 'color': 'red', 'weight': 1.0}},\n",
+       " 2: {1: {'another_attribute': 10, 'color': 'red', 'weight': 2.0},\n",
+       "  4: {'another_attribute': 10, 'color': 'red', 'weight': 1.0}},\n",
+       " 3: {1: {'another_attribute': 10, 'color': 'red', 'weight': 1.0},\n",
+       "  4: {'another_attribute': 10, 'color': 'red', 'weight': 5.0}},\n",
+       " 4: {2: {'another_attribute': 10, 'color': 'red', 'weight': 1.0},\n",
+       "  3: {'another_attribute': 10, 'color': 'red', 'weight': 5.0}}}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nx.to_dict_of_dicts(G)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Option 2: dict of lists and edge list. The second data structure contains all the necessary information for the graph, but maybe the first enables quicker lookups for connectedness given a node?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: [2, 3], 2: [1, 4], 3: [1, 4], 4: [2, 3]}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nx.to_dict_of_lists(G)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 2, {'another_attribute': 10, 'color': 'red', 'weight': 2.0}),\n",
+       " (1, 3, {'another_attribute': 10, 'color': 'red', 'weight': 1.0}),\n",
+       " (2, 4, {'another_attribute': 10, 'color': 'red', 'weight': 1.0}),\n",
+       " (3, 4, {'another_attribute': 10, 'color': 'red', 'weight': 5.0})]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nx.to_edgelist(G)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Option 3: numpy adjacency matrix. The entries indicate edge weights."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[ 0.,  2.,  1.,  0.],\n",
+       "        [ 2.,  0.,  0.,  1.],\n",
+       "        [ 1.,  0.,  0.,  5.],\n",
+       "        [ 0.,  1.,  5.,  0.]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nx.to_numpy_matrix(G)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Export to CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def process_edgelist(edge):\n",
+    "    return edge[0], edge[1], edge[2]['weight']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "edgelist = map(process_edgelist, nx.to_edgelist(G))\n",
+    "# This writes a CSV of floats, even thought nodes are integers. Not sure if this is an issue.\n",
+    "# This might not be an issue if I used Pandas to_csv.\n",
+    "np.savetxt('edgelist.csv.gz', edgelist)"
    ]
   }
  ],
