--- a/NetworkX Testing.ipynb
+++ b/NetworkX Testing.ipynb
@@ -619,6 +619,124 @@
     "# This might not be an issue if I used Pandas to_csv.\n",
     "np.savetxt('edgelist.csv.gz', edgelist)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from itertools import count\n",
+    "from heapq import heappush, heappop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Experimentation with a self coded version of Dijkstra's algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def dijkstra(G, source, weight=\"distance\"):\n",
+    "    \"\"\" Calculate all shortest paths from a given source node using Dijkstra's algorithm.\n",
+    "    \n",
+    "    Args:\n",
+    "        G: a NetworkX graph object\n",
+    "        source: the starting node for the shortest path algorithm\n",
+    "        \n",
+    "    Returns: a tuple holding two dictionaries. The first indicates the length of the \n",
+    "        shortest path to every node in G. The second indicates the previous node for\n",
+    "        any given node along the shortest path.\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    push = heappush\n",
+    "    pop = heappop\n",
+    "    \n",
+    "    dist = dict()\n",
+    "    prev = dict()\n",
+    "    q = []\n",
+    "    inf = float(\"inf\")\n",
+    "    c = count()\n",
+    "    \n",
+    "    for v in G.nodes_iter():\n",
+    "        dist[v] = inf\n",
+    "        prev[v] = None\n",
+    "        push(q, (inf, next(c), v))\n",
+    "    \n",
+    "    push(q, (0, next(c), source))\n",
+    "    dist[source] = 0\n",
+    "    visited = set()\n",
+    "    \n",
+    "    while q:\n",
+    "        d, _, u = pop(q)\n",
+    "        if u in visited:\n",
+    "            continue\n",
+    "        print \"visiting node\", u\n",
+    "        visited.add(u)\n",
+    "        for v in G[u]:\n",
+    "            alt = dist[u] + G.get_edge_data(u, v)[weight]\n",
+    "            if alt < dist[v]:\n",
+    "                print \"updating distance for node\", v\n",
+    "                dist[v] = alt\n",
+    "                prev[v] = u\n",
+    "                push(q, (alt, next(c), v))\n",
+    "    return dist, prev  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "visiting node 1\n",
+      "updating distance for node 2\n",
+      "updating distance for node 3\n",
+      "visiting node 3\n",
+      "updating distance for node 4\n",
+      "visiting node 2\n",
+      "updating distance for node 4\n",
+      "visiting node 4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "({1: 0, 2: 2.0, 3: 1.0, 4: 3.0}, {1: None, 2: 1, 3: 1, 4: 2})"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dijkstra(G, 1, weight=\"weight\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
