--- a/OSM Testing - Shapefiles.ipynb
+++ b/OSM Testing - Shapefiles.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Shortest Paths with NetworkX and OpenStreetMap Data  \n",
+    "## Shortest Paths with OpenStreetMap Data  \n",
     "### Shapefile Method\n",
     "\n",
     "This implementation takes the following approach:\n",
