--- a/OSM Testing - Overpass API.ipynb
+++ b/OSM Testing - Overpass API.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Shortest Paths with NetworkX and OpenStreetMap Data  \n",
+    "## Shortest Paths and OpenStreetMap Data  \n",
     "### Overpass API Method\n",
     "\n",
     "This implementation takes the following approach:\n",
