Put Python development files in a directory. Created placeholder file for a better demo of the Python method.

--- a/Python Method Development/OSM Testing - Reading PBF files.ipynb
+++ b/Python Method Development/OSM Testing - Reading PBF files.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -302,7 +302,7 @@
        "138910.8489766526"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -405,7 +405,7 @@
        "45.295286355447942"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -580,13 +580,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def dijkstra(G, source, weight=\"distance\"):\n",
+    "def dijkstra(G, source, target=None, weight=\"distance\"):\n",
     "    \"\"\" Calculate all shortest paths from a given source node using Dijkstra's algorithm.\n",
     "    \n",
     "    Args:\n",
@@ -615,24 +615,33 @@
     "    push(q, (0, next(c), source))\n",
     "    dist[source] = 0\n",
     "    visited = set()\n",
+    "    visited_list = []\n",
     "    \n",
     "    while q:\n",
     "        d, _, u = pop(q)\n",
     "        if u in visited:\n",
     "            continue\n",
+    "        #if u == target:\n",
+    "        #    break;\n",
     "        visited.add(u)\n",
-    "        for v in G[u]:\n",
+    "        visited_list.append(u)\n",
+    "        #print \"visiting\", u\n",
+    "        #for v in G[u]:\n",
+    "        for v in G.successors(u):\n",
     "            alt = dist[u] + G.get_edge_data(u, v)[weight]\n",
+    "            #print \"cur dist to \", v, \" is \", dist[v]\n",
+    "            #print \"new dist to \", v, \" is \", alt\n",
     "            if alt < dist[v]:\n",
+    "                #print \"updating distance\"\n",
     "                dist[v] = alt\n",
     "                prev[v] = u\n",
     "                push(q, (alt, next(c), v))\n",
-    "    return dist, prev  "
+    "    return dist, prev, visited_list "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -641,13 +650,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "61.8099282111 3.63292193413\n"
+      "61.8099282111 3.84344506264\n"
      ]
     }
    ],
    "source": [
     "t0 = time()\n",
-    "dist, prev = dijkstra(G, ILG_nearby_node)\n",
+    "dist, prev, vis = dijkstra(G, ILG_nearby_node, GED_nearby_node)\n",
     "print dist[GED_nearby_node], time() - t0"
    ]
   },
@@ -682,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -718,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -729,7 +738,7 @@
        "[1237277400L, 1237278781L, 1237278824L, 2404284705L, 2404284707L, 2404284708L]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,6 +768,126 @@
    "source": [
     "# path is the variable defined previously. It holds the shortest path using the NetworkX Dijkstra implementation.\n",
     "path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vis.index(GED_nearby_node)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "1237277400, 0)\n",
+    "(1237278813, 3.54057539182)\n",
+    "(1237278781, 9.61416387992)\n",
+    "(1237278051, 10.37792164917)\n",
+    "(2404284703, 15.22709910557)\n",
+    "(1237277072, 19.7599136515)\n",
+    "(1237278824, 21.686353484919998)\n",
+    "(2404284705, 23.193186384769998)\n",
+    "(1237278875, 25.75168986588)\n",
+    "(2404284707, 30.639559839199997)\n",
+    "(1237278157, 32.36809645706)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1237277400L,\n",
+       " 1237278813L,\n",
+       " 1237278781L,\n",
+       " 1237278051L,\n",
+       " 2404284703L,\n",
+       " 1237277072L,\n",
+       " 1237278824L,\n",
+       " 2404284705L,\n",
+       " 1237278875L,\n",
+       " 2404284707L,\n",
+       " 1237278157L,\n",
+       " 2404284708L]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vis[:12]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1237278875L: {'distance': 6.6164065911787278, u'highway': u'service'}}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G[long(1237278157)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(vis)"
    ]
   },
   {
